packages/parser/test/parser/E0103-call-expression.txt
a := test(a
===== err =====
anonymous:1:12: ParseError: E0103 - Expected closing parenthesis after call expression arguments
1 | a := test(a
  |            ^
